--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 <body>
 
   
-  <a href="https://empoweringwomenn.my.canva.site/" 
+  <a href="index.html"
      class="back-link" 
      target="_blank">
     <img src="back.png" class="back-btn" alt="back">
