--- a/index1.html
+++ b/index1.html
@@ -4,26 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Empowering Women</title>
-
   <link rel="stylesheet" href="ss.css">
 </head>
 <body>
 
-  
-  <a href="index.html"
-     class="back-link" 
-     target="_blank">
+  <a href="index.html" class="back-link">
     <img src="back.png" class="back-btn" alt="back">
   </a>
 
-  
   <div class="container">
 
-    <a href="ebook.html" target="_blank">
+    <a href="ebook.html">
       <img src="content.png" class="btn content" alt="content">
     </a>
 
-    <a href="https://heyzine.com/flip-book/3fb835a7e2.html" target="_blank">
+    <a href="https://heyzine.com/flip-book/3fb835a7e2.html">
       <img src="vocab.png" class="btn vocab" alt="vocab">
     </a>
 
