--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container">
         <video autoplay loop muted playsinline>
-            <source src="Empowering_Women (1).mp4" type="video/mp4">
+            <source src="empowering_women.mp4" type="video/mp4">
         </video>
-       
-        <a href="index1.html" target="_blank">
-            <img src="Home (4).png" class="center-img" alt="Home">
+
+        <a href="index1.html">
+            <img src="home4.png" class="center-img" alt="Home">
         </a>
     </div>
 </body>
