--- a/ebook.html
+++ b/ebook.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ebook</title>
+    <title>content</title>
 
     <style>
         body {
